Convert markdown documentation to org-mode
Convert the main README.md and the build instructions to .org-format.

Note:
  Use a fake link for heading to function on github, the github
  org-parsing doesn't understand non-file org-links.
  See: https://github.com/wallyqs/org-ruby/issues/11
  and https://gist.github.com/will-henney/d8564133e07e546789c0#via-cheating

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# Faint
+* Faint
 
 A cross-platform combined raster and vector graphics editor with
 Python scripting support.
@@ -17,6 +17,6 @@ files. This enables programmatic image editing and configuration.
 Functions can be connected to keys, so that they can be called
 conveniently while drawing.
 
-## Build instructions
-* [Windows (Visual Studio)](build/build-instructions-visual-studio.md)
-* [Linux (g++ or clang)](build/build-instructions-linux.md)
+** Build instructions
+   - [[file:build/build-instructions-visual-studio.org][Windows (Visual Studio)]]
+   - [[file:build/build-instructions-linux.md][Linux (g++ or clang)]]
