--- a/ext/README.org
+++ b/ext/README.org
@@ -1,8 +1,7 @@
-# Faint Python Extension
-
+* Faint Python Extension
 A Python3 extension based on Faint.
 
 This folder contains code for a Python extension library, providing
 functionality to import parts of the Faint API in Python instead of
-requiring the hassle of running Faint silently with --run on a script
+requiring the hassle of running Faint silently with ~--run~ on a script
 file.
